# Doorbell-System

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ADR 002- Face Recognition Implementation 22 date- 2025-10-23.txt  AUTOCLOSE_SETUP_SUMMARY.md  Building and Running the Project.txt  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  DEMO_IMPLEMENTATION_SUMMARY.md  Designing a Doorbell-Triggered Face Recognition Home Security System.docx  Designing a Doorbell-Triggered Face Recognition Home Security System.txt  Dockerfile  Dockerfile.multiarch  EDGETPU_IMPLEMENTATION_SUMMARY.md  End-to-End Plan for Building the System (Low-Cost Approach).docx  End-to-End Plan for Building the System (Low-Cost Approach).txt  FRONTEND_ENHANCEMENT_SUMMARY.md  Frigate NVR Codebase Deep Dive.txt  Google Photos Face Recognition_ Architecture and System Design Deep Dive.docx  Google Photos Face Recognition_ Architecture and System Design Deep Dive.txt  HARDWARE_ABSTRACTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUE_12.md  IMPLEMENTATION_SUMMARY_ISSUE_13.md  IMPLEMENTATION_SUMMARY_ISSUE_18.md  ISSUE_25_COMPLETION_SUMMARY.md  ISSUE_COMPLETION_REPORT.md  MIGRATION_GUIDE.md  Makefile  PRODUCTION_IMPLEMENTATION_SUMMARY.md  PR_REVIEW_SUMMARY.md  Planning.txt  README.md  README_TESTING.md  SENSOR_IMPLEMENTATION_SUMMARY.md  System Architecture and Design.txt  TESTING_FRAMEWORK_FILES.md  TESTING_FRAMEWORK_SUMMARY.md  TESTING_QUICK_REFERENCE.md  TEST_EXECUTION_GUIDE.md  (+25 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  agent_mvp.yml  copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: adr.yml  bug_report.yml  config.yml  enhancement.yml  pipeline_implementation.yml  security.yml
.github/workflows/: README.md  auto-close-issues.yml  ci.yml  codeql.yml  (+4 more)
ci/: quality_gates.yml  test_matrix.yml
config/: credentials_template.py  environment.py  event_config.py  hardware_config.py  hot_reload.py  logging_config.py  motion_config.py  orchestrator_config.py  pipeline_config.py  platform_configs.py  settings.py  storage_config.py  validation.py
demo/: README.md  __init__.py  orchestrator.py
docs/: ARCHITECTURE.md  CI_CD_QUICK_REFERENCE.md  CI_CD_TESTING_GUIDE.md  CODING_AGENT_SPECS.md  CONFIGURATION_MANAGEMENT.md  CONTRIBUTING.md  CROSS_PLATFORM_SETUP.md  DEVELOPMENT_ROADMAP.md  EDGETPU_DETECTOR.md  EVENT_PROCESSING.md  FACE_RECOGNITION_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_BUS_ERROR_HANDLING.md  PIPELINE_INTEGRATION.md  PLACEHOLDER_ANALYSIS_REPORT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_QUICK_REFERENCE.md  QUALITY_ASSURANCE.md  SECURITY.md  SENSOR_INTEGRATION_GUIDE.md  STARTUP_DEBUGGING_LOG.md  STREAMING_INTEGRATION.md  TESTING.md  TESTING_INFRASTRUCTURE.md  ensemble_detection_guide.md  face_detection_worker.md  frame_capture_worker.md  github-auto-close-setup.md  installation.md  model_manager_security.md  motion_detection.md
examples/: config_management_examples.py  demonstrate_error_handling.py  edgetpu_detector_demo.py  face_detection_demo.py  face_recognition_demo.py  frame_capture_demo.py  motion_detection_demo.py  sensor_monitoring_example.py  simple_sensor_test.py  storage_demo.py  streaming_demo.py
github_issues/: comprehensive_testing_framework.md  end_to_end_demo_validation.md  issue_01_communication_infrastructure_tests.md  issue_02_enhanced_detector_framework.md  issue_03_configuration_hot_reloading.md  issue_04_frame_capture_worker.md  issue_05_motion_detection_worker.md  issue_06_face_detection_worker.md  issue_07_face_recognition_engine.md  issue_08_event_processing_system.md  issue_09_hardware_abstraction_layer.md  issue_10_storage_layer.md  issue_11.5_real_time_web_streaming.md  issue_11_internal_notification_system.md  issue_12_pipeline_orchestrator_integration.md  issue_13_detector_implementations.md  issue_14_main_application_integration.md  issue_15_comprehensive_testing_framework.md  issue_16_production_readiness_deployment.md  issue_17_model_manager_security.md  issue_18_message_bus_error_handling.md  issue_19_raspberry_pi_sensor_integration.md  issue_20_edgetpu_accelerator_implementation.md  issue_21_ensemble_detection_system.md  issue_22_comprehensive_testing_framework.md  issue_23_end_to_end_demo_validation.md  issue_24_production_monitoring_analytics.md  issue_25_implement_comprehensive_testing_suite.md  ui_ux_optimization_enhancement.md
infrastructure/: __init__.py
monitoring/: __init__.py
production/: __init__.py
scripts/: deploy_production.py  generate_implementation_issues.py  generate_model_hashes.py  migrate_to_pipeline.py  rollback_migration.py  setup_dev_environment.sh  start-web.sh  test-macos.sh  validate_error_handling.py  validate_migration.py
src/: camera_handler.py  doorbell_security.py  face_manager.py  gpio_handler.py  main.py  platform_detector.py  telegram_notifier.py  web_interface.py
static/: manifest.json  service-worker.js
templates/: dashboard-backup.html  dashboard.html
tests/: COMMUNICATION_TEST_SUMMARY.md  README.md  conftest.py  run_orchestrator.py  test_alert_manager.py  test_blue_green_deployment.py  test_communication_integration.py  test_config_integration.py  test_config_validation.py  test_cpu_detector.py  test_detector_benchmarking.py  test_detector_ensemble.py  test_detector_factory.py  test_detector_health_monitor.py  test_detector_integration.py  test_edgetpu_detector.py  test_enrichment_processors.py  test_ensemble_enhanced.py  test_environment_management.py  test_error_handling.py  test_event_database.py  test_event_processing_integration.py  test_event_processor.py  test_events.py  test_face_detector.py  test_face_recognizer.py  test_frame_capture.py  test_frame_capture_integration.py  test_gpu_detector.py  test_hardware_abstraction.py  test_hardware_detector.py  test_hardware_integration.py  test_health_checker.py  test_hot_reload.py  test_message_bus.py  test_message_bus_error_handling.py  test_model_manager.py  test_motion_detector.py  test_notification_handler.py  test_orchestrator_framework.py  (+9 more)
(+224 files in other folders)
